# adw_test

./: README.md  pyproject.toml
adw/: manage.py
adw/adw/: asgi.py  settings.py  urls.py  wsgi.py
adw/tizer/: apps.py  models.py  process.py  serializers.py  tests.py  urls.py  utils.py  views.py
adw/tizer/migrations/: 0001_initial.py
